Segfaulty faultly fault fault.

--- a/src/cmakedbg/CMakeLists.txt
+++ b/src/cmakedbg/CMakeLists.txt
@@ -2,11 +2,12 @@ get_directory_property( cmake_includes DIRECTORY ${CMake_SOURCE_DIR}/Source
   INCLUDE_DIRECTORIES )
 include_directories( ${CMAKEDBG_SOURCE_DIR}/include 
   ${cmake_includes}
+  ${CMAKEDBG_BINARY_DIR}/src/cmakedbg
   )
 
 set_source_files_properties( debugger.pyx PROPERTIES CYTHON_IS_CXX TRUE )
 
-cython_add_module( debugger debugger.pyx
+cython_add_module( debugger debugger.pyx debugger_helper.cxx
   )
 target_link_libraries( debugger CMakeLib cmsys 
   ${CMAKE_EXPAT_LIBRARIES} ${CMAKE_ZLIB_LIBRARIES}
