The Debugger is now C++.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,10 @@
+set( cmDebugger_SRCS_FILENAMES
+  pythonDebuggerGetNextCommandCallback.cxx
+  cmDebugger.cxx
+  )
+set( cmDebugger_SRCS "" )
+foreach( src ${cmDebugger_SRCS_FILENAMES} )
+  list( APPEND cmDebugger_SRCS ${CMAKE_CURRENT_LIST_DIR}/${src} )
+endforeach()
+
 add_subdirectory( cmakedbg )
