Add LoadCache breakpoint.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 set( cmDebugger_SRCS_FILENAMES
   pythonDebuggerGetNextCommandCallback.cxx
+  cmBreakpoint.cxx
   cmDebugger.cxx
   )
 set( cmDebugger_SRCS "" )
